# trajectory_generation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py  test.py
include/: random_route_generator.hpp  traj_action_client.hpp  traj_action_server.hpp  traj_gen.hpp  traj_min_snap.hpp  trajectory_wrapper.hpp
launch/: traj_gen.launch.py
python_lib/: generate.py  requirements.txt  test.py
python_lib/utils/: trajectory_factory.py  trajectory_query.py
python_lib/vis/: plotting.py  vis.py
src/: action_client.cpp  action_server.cpp  example1_node.cpp  pywrap.cpp  traj_action_client.cpp  traj_action_server.cpp  traj_gen.cpp  trajectory_wrapper.cpp
